--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
