Update vercel.json 1

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "builds": [
     { "src": "dist/spa/**", "use": "@vercel/static" }
   ],
+    "outputDirectory": "dist/spa",
   "routes": [
     {
       "src": "/.*",
