--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-  "builds": [
-    { "src": "dist/spa/**", "use": "@vercel/static" }
-  ],
-    "outputDirectory": "dist/spa",
+  "outputDirectory": "dist/spa",
   "routes": [
     {
       "src": "/.*",
-      "dest": "/spa/index.html"
+      "dest": "/index.html"
     }
   ]
 }
